--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Läd Anhänge über die PowerFolder cloud hoch und versendet diese als Links"
+    "message": "Läd Anhänge über die PowerFolder Cloud hoch und versendet diese als Links"
   },
   "extensionName": {
     "message": "PowerFolder"
