--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Uploads your large attachments to your PowerFolder cloud instead of sending them by email"
+    "message": "Uploads your large attachments to your PowerFolder Cloud instead of sending them by email"
   },
   "extensionName": {
     "message": "PowerFolder"
